<resources>
    <string name="app_name">Astro</string>
    <string name="moon_background">moon_background</string>
    <string name="sun_image">sun_image</string>
    <string name="wsch_d">Wschód</string>
    <string name="zach_d">Zachód</string>
    <string name="azymut_wschodu">Azymut wschodu</string>
    <string name="azymut_zachodu">Azymut zachodu</string>
    <string name="wit">Świt</string>
    <string name="zmierzch">Zmierzch</string>
    <string name="n_w">Nów</string>
    <string name="pe_nia">Pełnia</string>
    <string name="faza">Faza</string>
    <string name="dzie">Dzień</string>
    <string name="zegar">Zegar</string>
    <string name="szeroko">Szerokość</string>
    <string name="wysoko">Wysokość</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="od_wie_anie">Odświeżanie</string>
    <string name="zapisz">Zapisz</string>
    <string name="wysoka">Wysoka</string>
    <string name="niska">Niska</string>
    <string name="miasto">Miasto</string>
    <string name="szukanie_miastem">Szukanie miastem</string>
    <string name="ustawienia">Ustawienia</string>
    <string name="jednostki">Jednostki</string>
    <string name="celsjusz">Celsjusz</string>
    <string name="farenheit">Farenheit</string>
    <string name="kilometry">Kilometry</string>
    <string name="mile">Mile</string>
    <string name="kraj">Kraj</string>
    <string name="temp">Temp</string>
    <string name="ci_nienie">Ciśnienie</string>
    <string name="opis">Opis</string>
    <string name="textview">TextView</string>
    <string name="name">Name</string>
    <string name="ulubione">Ulubione</string>
    <string name="zamknij">Zamknij</string>
</resources>
