<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.WeatherFragment">

    <ImageView
        android:id="@+id/weatherIconImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="375dp"
        android:layout_marginEnd="104dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/icon_na"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dayTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:layout_marginEnd="147dp"
        android:layout_marginStart="162dp"
        android:layout_marginTop="14dp"
        android:text="@string/dzie"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/highTemperatureTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherIconImageView" />

    <TextView
        android:id="@+id/highTemperatureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="157dp"
        android:layout_marginStart="163dp"
        android:layout_marginTop="6dp"
        android:text="@string/wysoka"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/lowTemperatureTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dayTextView" />

    <TextView
        android:id="@+id/lowTemperatureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="253dp"
        android:layout_marginEnd="187dp"
        android:layout_marginStart="163dp"
        android:layout_marginTop="11dp"
        android:text="@string/niska"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/highTemperatureTextView" />
</android.support.constraint.ConstraintLayout>